# rust-persona

./: .gitignore  Cargo.toml  README.md  db.json
.claude/: settings.local.json
src/: main.rs  models.rs
static/css/: main.css
static/js/: animations.js  shaders.js
templates/: base.html  index.html
templates/partials/: job.html
