[package]
name = "rust-persona"
version = "1.0.0"
edition = "2021"
authors = ["Jim Zaccardo"]

[dependencies]
anyhow = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
